--- a/app/views/layouts/ads.html.erb
+++ b/app/views/layouts/ads.html.erb
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Sessions: <%= controller.action_name %></title>
+  <title>Ads: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
   <%= javascript_include_tag 'jquery' %>
   <%= yield :head %>
@@ -12,7 +12,6 @@
 <body>
 
 <p style="color: green"><%= flash[:notice] %></p>
-<p style="color: red"><%= flash[:error] %></p>
 
 <%= yield %>
 
