--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <h1>Welcome <%= current_user.login %></h1>
+  <h1>Welcome <%= current_user.name %></h1>
   <%= link_to 'logout', logout_path %>
 <% else %>
   <h1>Welcome user</h1>
