--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Sessions: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <title><%= controller.action_name %></title>
+  <%= stylesheet_link_tag 'style' %>
   <%= javascript_include_tag 'jquery' %>
   <%= yield :head %>
 </head>
 <body>
-
-<p style="color: green"><%= flash[:notice] %></p>
-<p style="color: red"><%= flash[:error] %></p>
-
-<%= yield %>
-
+  <div id="wrapper">
+    <%= render :partial => "shared/header" %>
+    <div id="white-wrap">
+      <div id="content">
+       <%= render :partial => "shared/messages" %>
+        <%= yield %>
+      </div>
+    </div>
+    <%= render :partial => "shared/footer" %>
+  </div>
 </body>
 </html>
