Ad display page

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,38 +1,45 @@
-<h1>Listing ads</h1>
+<%= render :partial => "ads/search_box" %>
+<%= render :partial => "shared/breadcrumbs" %>
+<div class="clear"></div>
+<div id="tabsList">
+  <div class="wrap">
+      <ul class="searchTabs">
+      <li class="active"><a href="#">All 1 - 30 of 893</a></li>
+      <li><a href="#">Private, 444</a></li>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th>Phone</th>
-    <th>Show phone</th>
-    <th>Category</th>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Price</th>
-    <th>Approved</th>
-    <th>Private</th>
-  </tr>
+      <li><a href="#">Company, 449</a></li>
+    </ul>
 
-<% @ads.each do |ad| %>
-  <tr>
-    <td><%=h ad.name %></td>
-    <td><%=h ad.email %></td>
-    <td><%=h ad.phone %></td>
-    <td><%=h ad.show_phone %></td>
-    <td><%=h ad.category_id %></td>
-    <td><%=h ad.title %></td>
-    <td><%=h ad.description %></td>
-    <td><%=h ad.price %></td>
-    <td><%=h ad.approved %></td>
-    <td><%=h ad.private %></td>
-    <td><%= link_to 'Show', ad %></td>
-    <td><%= link_to 'Edit', edit_ad_path(ad) %></td>
-    <td><%= link_to 'Destroy', ad, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+    <div class="rightlinks">
+     <a href="#">Hide Thumbnails</a> | <a href="#">Show Cheapest First</a>
+    </div>
+  </div>
+</div>
 
-<br />
+<div class="clear"></div>
 
-<%= link_to 'New ad', new_ad_path %>
+<div id="listing">
+  <ul class="categoriesFound">
+    <li><a href="#">Real estate,</a> 14952</li><li><a href="#">Home &amp; Personal Items,</a> 3511</li><li><a href="#">Electronics,</a> 4324</li><li><a href="#">Vehicles,</a> 3167</li><li><a href="#">Leisure, Sports &amp; Hobby,</a> 3232</li><li><a href="#">Jobs &amp; Services,</a> 9988</li>
+  </ul>
+  <div class="clear"></div>
+  <ul class="list">
+  <% @ads.each do |ad| %>
+    <li> 
+      <div class="date"><%= ad.timestamp %></div><div class="list-image"><%= image_tag ad.logo %></div>
+      <div class="list-name"><span class="name"><a href="#"><%= ad.title %></a></span><span class="price"><%= currency(ad.price) %></span></div>
+      <div class="list-detail"><%= ad.category.name %><br/><%= ad.city.name %></div>  
+    </li>
+  <% end %>
+
+  </ul>
+  
+  <div id="list-nav">
+    <span class="count"><a href="#">1 2 3 4 4 5 6 7 8 9 10</a></span>
+    <span class="next"><a href="#">Next Page &gt;&gt;</a></span>
+   <span class="last"><a href="#">Last Page &gt;&gt;</a></span>
+  </div>
+  
+</div>
+
+<div class="clear"></div>
