Ad display page: added bottom bar + CSS update

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -43,3 +43,8 @@
 </div>
 
 <div class="clear"></div>
+
+<% content_for :bottom do %>
+  <%= render :partial => "ads/bottom.html.erb"%>
+<% end %>
+
