--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -62,7 +62,7 @@
       <td><%= f.text_field :title %></td>
     </tr>
     <tr>
-      <td><%= f.label :description %></td>
+      <td valign="top"><%= f.label :description %></td>
       <td><%= f.text_area :description %></td>
     </tr>
     <tr>
