--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <%= yield %>
       </div>
     </div>
+    <%= yield :bottom %>
     <%= render :partial => "shared/footer" %>
   </div>
 </body>
