--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,14 +4,17 @@
 /* Global white space reset */
 * {padding:0; margin:0}
 pre, blockquote, ul, ol, dl, fieldset, address {margin:0 10px}
-li, dd {margin-left:10px}
+li, dd {margin-left:10px; padding:4px 0;}
 fieldset {padding:6px}
 
 /* Undo default HTML styling of common browsers */
-a:link, a:visited {text-decoration:none; font-weight:bold}
-h1 a:link, h1 a:visited, h2 a:link, h2 a:visited, h3 a:link, h3 a:visited, h4 a:link, h4 a:visited {text-decoration:none; color:#0079c1;}
+a:link, a:visited {text-decoration:none; font-weight:bold; color:#10a910;}
+h1, h2, h3, h4, h1 a:link, h1 a:visited, h2 a:link, h2 a:visited, h3 a:link, h3 a:visited, h4 a:link, h4 a:visited {text-decoration:none; color:#ff9600; margin:5px 0;}
+h1 {font-size:20px; margin:20px 0;}
+h2 {font-size:16px; margin:10px 0;}
 ul, ol {list-style:none}
 img {border:none}
+
 
 /* General */
 html, body {height:100%}
@@ -19,14 +22,19 @@ body {
 	background:#ff9600;
 	color:#666666;
 	margin:0 auto;
+	line-height:18px;
 	font:normal 12px/13px "Trebuchet MS",arial,serif;
 	}
 #wrapper {padding-bottom:10px;}
 /* General links */
 a:hover {text-decoration:underline}
-a:active {text-decoration:none}
+a:active {text-decoration:none; color:#10a910;}
 a:focus, input:focus {outline:none}
 a:hover {color:#333; text-decoration:none;}
+input[type=text], input[type=password], select, textarea {border:1px solid #ccc; color:#666; font-size:12px; margin-bottom:10px; width:348px; height:20px; padding:2px;}
+textarea {height:200px;}
+input[type=radio] {width:40px;}
+
 p {margin:0 0 8px 0px}
 p {line-height:18px; font-size:14px; margin-bottom:10px;}
 p.small {font-size:12px; line-height:16px; margin-bottom:5px;}
@@ -38,7 +46,6 @@ p.small {font-size:12px; line-height:16px; margin-bottom:5px;}
 .clear {clear:both;}
 /************************************** Header ************************************************/
 #header, #header .wrap { height:90px;}
-#header {}
 #header .logo {	float:left; margin-top:8px; margin-left:20px;}
 #header .toplinks {
 	float:right;
@@ -54,11 +61,7 @@ p.small {font-size:12px; line-height:16px; margin-bottom:5px;}
 #header .toplinks ul.topmenu li a {color:white; font-size:13px;}
 /**********************/
 
-#maincontent {
-	background:white;min-height:90%;
-	height: expression( this.scrollHeight < 534 ? "533px" : "auto" ); 
-	height:auto; padding-top:20px;
-}
+#maincontent { background:white;min-height:90%; height: expression( this.scrollHeight < 534 ? "533px" : "auto" ); height:auto; padding:20px; }
 #maincontent #maparea { float:left; background:url(/images/map.png) no-repeat; width:470px; height:505px;}
 #maincontent #maparea:hover { float:left; background:url(/images/map_over.png) no-repeat; width:470px; height:505px;}
 #maincontent #rightarea {float:right; width:420px;}
@@ -78,28 +81,28 @@ p.small {font-size:12px; line-height:16px; margin-bottom:5px;}
 #search .inner .searchform input[type=text] {margin-right:10px;}
 #search .inner .searchform .check {padding-top:10px;}
  
-.breadcrumbs {float:left; padding-left:40px;width:100%;margin:10px 0;}
+.breadcrumbs {float:left; padding-left:20px; margin:15px 0;width:100%;}
 .breadcrumbs a, .breadcrumbs a:link, .breadcrumbs a:active {color:black; font-size:12px; font-weight:normal;}
 .breadcrumbs a:hover {text-decoration:underline;}
 
 #tabsList {background:#e7ffe7; padding-top:10px;float:left;width:100%;position:absolute;left:0;}
-#tabsList .wrap {height:28px; padding:8px 30px 0;width:940px;}
+#tabsList .wrap {height:32px; padding:8px 30px 0;width:940px;}
 #tabsList .rightlinks {float:right; text-align:left; position:relative; right:30px;}
 #tabsList .rightlinks a {color:#666666; font-size:14px; font-weight:normal;}
 #tabsList .rightlinks a:hover {text-decoration:underline;}
 
 #tabsList ul.searchTabs {float:left; display:inline;}
 #tabsList ul.searchTabs li {float:left;}
-#tabsList ul.searchTabs li a { color:white; background:#ffb246; font-size:16px; padding:5px 15px 10px; 	-moz-border-radius-topleft:5px;	-moz-border-radius-topright:5px; border-top-left-radius:5px; border-top-right-radius:5px}
+#tabsList ul.searchTabs li a { color:white; background:#ffb246; font-size:16px; padding:5px 15px 10px; 	-moz-border-radius-topleft:5px;	-moz-border-radius-topright:5px; border-top-left-radius:5px; border-top-right-radius:5px; -webkit-border-top-right-radius:5px; -webkit-border-top-left-radius:5px; }
 #tabsList ul.searchTabs li.active a, #tabsList ul.searchTabs li a:active, #tabsList ul.searchTabs li a:hover {color:white; background:#ffb246 url(/images/act-tab.png) repeat-x left bottom; font-size:16px;}
-#listing {float:left; margin-top:60px; padding:10px 20px;}
+#listing {float:left; margin:0; padding:10px 20px; margin-top:60px;}
 #listing ul.categoriesFound {float:left; width:670px;}
 #listing ul.categoriesFound li {float:left; width:200px; color:black; font-size:14px; padding:5px;}
 #listing ul.categoriesFound li a {color:#ff9600; font-size:14px; font-weight:normal;}
 
 ul.list {width:920px; padding:10px; margin:0; line-height:18px; float:left; font-size:14px; color:black;}
 ul.list li {border-bottom:1px solid #ccc; float:left; width:840px; padding:10px 0;}
-div.date {float:left; width:120px; font-size:14px; color:black;text-align:center;}
+div.date {float:left; width:100px; font-size:14px; color:black;text-align:center;}
 ul.list li .list-image {width:100px;float:left;overflow: hidden;text-align:center;}
 ul.list li .list-name {float:left; width:460px; padding-left:10px;}
 ul.list li .list-name span.name {float:left; width:540px;}
@@ -137,14 +140,41 @@ ul.list li .list-detail {float:left; padding:0 10px; width:130px;text-align:cent
 .bottom .category ul li {margin:0; line-height:18px; margin-bottom:20px;}
 .bottom .category ul li a {color:white;}
 
+#create-new-ad {float:left; font-size:14px;}
+#create-new-ad .field {width:860px; float:left; margin:10px 0;}
+#create-new-ad .value {float:left; width:360px; height:20px;}
+#create-new-ad .label {float:left; width:120px; margin-right:10px; padding-top:6px;}
+#create-new-ad .value input.price {width:325px;}
+#create-new-ad select {width:353px; height:28px;}
+#create-new-ad span {float:left; padding-top:4px;}
+#create-new-ad input.image1 {float:left; height:25px;}
+#create-new-ad input.image {float:left; height:25px; width:270px; margin-left:10px;}
+#create-new-ad input.submit {float:left; background:url(/images/continue.png) no-repeat left top; width:97px; padding:4px; color:#ffffff; font-size:15px; border:none; position:relative; left:130px; margin:20px 0; height:28px;}
+
+#ad-display {float:left; background:url(/images/ad-top.png) no-repeat left top; width:900px; padding-top:35px; margin:10px 0;}
+#ad-display .ad-end {float:left; background:url(/images/ad-end.png) no-repeat left top; width:900px; height:25px; margin:0;}
+#ad-display .inner {float:left; background:url(/images/ad-mid.png) repeat-y left top; width:850px; height:auto; margin:0; padding:0 25px;}
+#ad-display .info {float:left; font-size:14px; line-height:18px; width:420px;}
+#ad-display .info .desc {font-size:14px; text-align:justify; margin-bottom:25px;}
+#ad-display .links {float:left; width:420px;}
+#ad-display .links ul {float:left; display:inline;}
+#ad-display .links ul li {float:left; width:188px; margin:10px 0;}
+#ad-display .links ul li img {float:left; margin-right:10px;}
+#ad-display .links ul li a {font-weight:normal; padding-top:8px; float:left}
+.favorites h2, .favorites img {float:left;}
+.favorites h2 {padding-top:10px;}
+#ad-display .gallery {float:right; border:1px solid black; width:400px; height:400px; margin-bottom:10px;} 
+.customer-service ul li {list-style-image:url(/images/bullet.gif);}
+.customer-service ul li a {font-size:14px; font-weight:normal;}
+.gray-btn {float:left; width:127px; height:27px; margin-right:30px;}
+.gray-btn a.graybtn {float:left; background:url(/images/gray-btn.png) no-repeat; padding:7px 0 10px; color:white; text-decoration:none; text-align:center; width:127px;}
 /************************************** Footer ************************************************/
-#footer {background:#ffb246; height:22px; margin-bottom:20px; padding-top:10px;}
+#footer {background:#ffb246; height:22px; margin-bottom:20px; padding:5px 0;}
 #footer ul.footlinks {float:left; display:inline; list-style:none;}
 #footer ul.footlinks li {float: left; padding-left:40px;}
 #footer ul.footlinks li a {color:white;}
-#footer .rights {float:right; color:white; margin-right:50px;}
+#footer .rights {float:right; color:white; margin-right:50px;padding:5px 0;}
 #footer .rights a {color:white;}
-
 
 .invisible {
   display:none;
@@ -162,9 +192,9 @@ ul.list li .list-detail {float:left; padding:0 10px; width:130px;text-align:cent
   margin: 0 auto;
   width: 940px;
   padding: 20px 0;
-	height: expression( this.scrollHeight < 534 ? "533px" : "auto" ); 
-	height:auto;
-	min-height:533px;
+  height: expression( this.scrollHeight < 534 ? "533px" : "auto" ); 
+  height:auto;
+  min-height:533px;
 }
 
 table td {
