--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,18 +62,18 @@ p.small {font-size:12px; line-height:16px; margin-bottom:5px;}
 /**********************/
 
 #maincontent { background:white;min-height:90%; height: expression( this.scrollHeight < 534 ? "533px" : "auto" ); height:auto; padding:20px; }
-#maincontent #maparea { float:left; background:url(/images/map.png) no-repeat; width:470px; height:505px;}
-#maincontent #maparea:hover { float:left; background:url(/images/map_over.png) no-repeat; width:470px; height:505px;}
-#maincontent #rightarea {float:right; width:420px;}
-#maincontent #rightarea .searchform { width:420px; height:240px; background:url(/images/bg_post_form.png) no-repeat; float:left; color:#666; margin-bottom:10px;}
-#maincontent #rightarea .searchform .title {float:left; width:420px; text-align:center; color:white; font-size:20px; padding:15px 0; margin-bottom:10px;}
-#maincontent #rightarea .searchform form {float:left; padding-left:32px;}
-#maincontent #rightarea .searchform input[type=text], #search .inner .searchform input[type=text] { float:left; width:348px; height:22px; padding:2px; border:1px solid #ccc; color:#666; font-size:12px; margin-bottom:10px;}
-#maincontent #rightarea .searchform select, #search .inner .searchform select { float:left; width:168px; height:25px; padding:2px; border:1px solid #ccc; color:#666; font-size:12px; margin-right:16px; margin-bottom:10px;}
-#maincontent #rightarea .searchform input[type=checkbox], #search .inner .searchform input[type=checkbox] {width:12px; height:11px; padding:0px; color:#666;}
-#maincontent #rightarea .searchform .check, #search .inner .searchform .check { float:left; width:95px; padding-top:15px;}
-#maincontent #rightarea .searchform input[type=button] {background: transparent url(/images/search_btn.png) no-repeat; border:none; padding:8px 30px 10px 9px; position:relative; right:46px; float:right; font-size:20px; color:white;}
-#maincontent #rightarea .searchform input[type=button]:hover {color:black;}
+#maparea { float:left; background:url(/images/map.png) no-repeat; width:470px; height:505px;}
+#maparea:hover { float:left; background:url(/images/map_over.png) no-repeat; width:470px; height:505px;}
+#rightarea {float:right; width:420px;}
+#rightarea .searchform { width:420px; height:240px; background:url(/images/bg_post_form.png) no-repeat; float:left; color:#666; margin-bottom:10px;}
+#rightarea .searchform .title {float:left; width:420px; text-align:center; color:white; font-size:20px; padding:15px 0; margin-bottom:10px;}
+#rightarea .searchform form {float:left; padding-left:32px;}
+#rightarea .searchform input[type=text], #search .inner .searchform input[type=text] { float:left; width:348px; height:22px; padding:2px; border:1px solid #ccc; color:#666; font-size:12px; margin-bottom:10px;}
+#rightarea .searchform select, #search .inner .searchform select { float:left; width:168px; height:25px; padding:2px; border:1px solid #ccc; color:#666; font-size:12px; margin-right:16px; margin-bottom:10px;}
+#rightarea .searchform input[type=checkbox], #search .inner .searchform input[type=checkbox] {width:12px; height:11px; padding:0px; color:#666;}
+#rightarea .searchform .check, #search .inner .searchform .check { float:left; width:95px; padding-top:15px;}
+#rightarea .searchform input[type=button] {background: transparent url(/images/search_btn.png) no-repeat; border:none; padding:8px 30px 10px 9px; position:relative; right:46px; float:right; font-size:20px; color:white;}
+#rightarea .searchform input[type=button]:hover {color:black;}
 #search .inner .searchform input[type=button] {background: transparent url(/images/search_btn_green.png) no-repeat; border:none; padding:3px 13px 10px 13px; position:relative; float:left; font-size:16px; color:white;}
 #search .searchform {float:left;width:100%; padding:0; width:820px;}
 #search .inner .searchform form {float:left; padding:0; width:820px;}
