--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ a:hover {text-decoration:underline}
 a:active {text-decoration:none; color:#10a910;}
 a:focus, input:focus {outline:none}
 a:hover {color:#333; text-decoration:none;}
-input[type=text], input[type=password], select, textarea {border:1px solid #ccc; color:#666; font-size:12px; margin-bottom:10px; width:348px; height:20px; padding:2px;}
+input[type=text], input[type=password], select, textarea {border:1px solid #ccc; color:#666; font-size:12px; width:348px; height:20px; padding:2px;}
 textarea {height:200px;}
 input[type=radio] {width:40px;}
 
@@ -200,3 +200,41 @@ ul.list li .list-detail {float:left; padding:0 10px; width:130px;text-align:cent
 table td {
   padding: 5px;
 }
+
+
+.fieldWithErrors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+#errorExplanation {
+  width: 400px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#errorExplanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px;
+  background-color: #c00;
+  color: #fff;
+}
+
+#errorExplanation p {
+  color: #333;
+  margin-bottom: 0;
+  padding: 5px;
+}
+
+#errorExplanation ul li {
+  font-size: 12px;
+  list-style: square;
+}
+
