--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -35,7 +35,7 @@
   </ul>
   
   <div id="list-nav">
-    <span class="count"><a href="#">1 2 3 4 4 5 6 7 8 9 10</a></span>
+    <span class="count"><a href="#">1 2 3 4 5 6 7 8 9 10</a></span>
     <span class="next"><a href="#">Next Page &gt;&gt;</a></span>
    <span class="last"><a href="#">Last Page &gt;&gt;</a></span>
   </div>
@@ -45,6 +45,6 @@
 <div class="clear"></div>
 
 <% content_for :bottom do %>
-  <%= render :partial => "ads/bottom.html.erb"%>
+  <%= render :partial => "ads/bottom"%>
 <% end %>
 
