--- a/app/views/ads/new/_upload.html.erb
+++ b/app/views/ads/new/_upload.html.erb
@@ -1,8 +1,8 @@
 <div id="upload-image-container">
-  <span>
+  <div>
     <br/>
     <input type="file" size="30">
     <%= link_to 'Remove', '#', :onclick => "$(this).parent().remove(); return false;" %>
-  </span>
+  </div>
 </div>
 
