--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%= controller.action_name %></title>
+  <title><%= page_title %></title>
   <%= stylesheet_link_tag 'style' %>
   <%= javascript_include_tag 'jquery' %>
   <%= yield :head %>
