--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,10 +3,10 @@
     <div class="logo"><%= link_to image_tag('logo.png'), root_path %></div>
     <div class="toplinks">
       <ul class="topmenu">
-        <li><%= link_to [image_tag('icon_home.png', :size => '19x15'), "Home"].join("<br/>"), root_path %></li>
-        <li><%= link_to [image_tag('icon_fav.png', :size => '19x15'), "Favourites"].join("<br/>"), '#' %></li>
-        <li><%= link_to [image_tag('icon_search.png', :size => '19x15'), "Search"].join("<br/>"), ads_path %></li>
-        <li><%= link_to [image_tag('icon_ad.png', :size => '19x15'), "Post Ad"].join("<br/>"), new_ad_path %></li>
+        <li><%= link_to image_tag('icon_home.png'), root_path %></li>
+        <li><%= link_to image_tag('icon_fav.png'), '#' %></li>
+        <li><%= link_to image_tag('icon_search.png'), ads_path %></li>
+        <li><%= link_to image_tag('icon_ad.png'), new_ad_path %></li>
       </ul>
     </div>
   </div>
