--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -1,6 +1,5 @@
 <div class="breadcrumbs">
-  <a href="#">geboon.com</a> &gt;
-  <a href="#">Entire India</a>
+  <%= breadcrumbs_trail %>
 </div>
 <div class="clear"></div>
 
