--- a/app/views/ads/index/_facets.html.erb
+++ b/app/views/ads/index/_facets.html.erb
@@ -2,7 +2,11 @@
   <% if params[:search][:category_parent_name].blank? && params[:search][:category_name].blank? %>
     <% @facets[:category_parent_text].each do |text, count| %>
       <li>
-        <a href="<%= search_url_with(:category_parent_name => text.to_crc32) %>"><%= text.blank? && "Other" || text %></a>, <%= number_with_delimiter(count) %>
+        <% if text.blank? %>
+          <a href="<%= search_url_with(:category_name => '412686884') %>">Other</a>, <%= number_with_delimiter(count) %>
+        <% else %>
+          <a href="<%= search_url_with(:category_parent_name => text.to_crc32) %>"><%= text.blank? && "Other" || text %></a>, <%= number_with_delimiter(count) %>
+        <% end %>
       </li>
     <% end %>
   <% else %>
